#final-draft: fix vertical-align for inline blocks

--- a/source/sass/components/btn.scss
+++ b/source/sass/components/btn.scss
@@ -9,6 +9,7 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 30px;
+  vertical-align: middle;
   text-transform: uppercase;
 
   border-radius: 3px;
