--- a/source/sass/components/control-text.scss
+++ b/source/sass/components/control-text.scss
@@ -119,6 +119,8 @@
 
   &__output-wrap {
     display: inline-block;
+
+    vertical-align: middle;
   }
 
   &__output {
